src/test/deca/syntax/valid/objet/DeclClassParam.deca
// Description : test déclaration d'une méthode avec paramètre
// Resultats : ok

class Thing {

    int getI(int i){
        print("cool");
    }

}
